Add workflow to validate tweets (#1124)
* Add initial action to validate tweets

* Example test tweet

* Test

* Global installation

* Run actual check

* Add missing files

* Fix dockerfile

* Use extracted tweet

* Invalid tweet test

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Remove tweet file

* Skip if no tweet

* Test

* Remove release files

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -39,6 +39,16 @@ jobs:
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
 
+  validate-tweet:
+    runs-on: ubuntu-latest
+    needs: read-tweet-md
+    if: ${{ needs.read-tweet-md.outputs.tweet != '' }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Validate tweet
+        uses: ./.github/validate-tweet-action
+        with:
+          tweet: ${{ needs.read-tweet-md.outputs.tweet }}
 
   generate-preview:
     runs-on: ubuntu-latest
