--- a/.github/read-tweet-action/action.yml
+++ b/.github/read-tweet-action/action.yml
@@ -1,5 +1,9 @@
 name: 'Strawberry Read Tweet Action'
 inputs:
+  version:
+    required: false
+  contributor_name:
+    required: true
   changelog:
     required: true
 runs:
