--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,9 +23,25 @@ jobs:
       id: release-check
       if: github.event.pull_request.draft == false
 
-  read-tweet-md:
+  get-contributor-name:
+    name: Get PR info
     runs-on: ubuntu-latest
-    needs: release-file-check
+
+    outputs:
+      contributor-name: ${{ steps.get-info.outputs.contributor-name }}
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get PR info
+        id: get-info
+        uses: ./.github/get-pr-info-action
+        env:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  read-tweet-md:
+    name: Read TWEET.md
+    runs-on: ubuntu-latest
+    needs: [get-contributor-name, release-file-check]
 
     outputs:
       tweet: ${{ steps.extract.outputs.tweet }}
@@ -38,6 +54,8 @@ jobs:
       uses: ./.github/read-tweet-action
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
+        version: "(next)"
+        contributor_name: ${{ needs.get-contributor-name.outputs.contributor-name }}
 
   validate-tweet:
     runs-on: ubuntu-latest
@@ -64,7 +82,7 @@ jobs:
       if: ${{ needs.release-file-check.outputs.status == 'OK' }}
       with:
         version: "(next)"
-        contributor: ${{ github.event.pull_request.user.login }}
+        contributor: ${{ needs.get-contributor-name.outputs.contributor-name }}
         description_base64: ${{ needs.read-tweet-md.outputs.card_text }}
 
     - name: Uploads preview
