--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -76,7 +76,7 @@ jobs:
 
   generate-preview:
     runs-on: ubuntu-latest
-    needs: [release-file-check, read-tweet-md]
+    needs: [release-file-check, read-tweet-md, get-contributor-name]
     if: always() && github.event.pull_request.draft == false
 
     outputs:
