Sent tweet to bot

--- a/.github/bot-action/action.yml
+++ b/.github/bot-action/action.yml
@@ -8,6 +8,8 @@ inputs:
     required: true
   changelog_base64:
     required: true
+  tweet:
+    required: false
   release_card_url:
     required: false
 runs:
