--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,13 +23,33 @@ jobs:
       id: release-check
       if: github.event.pull_request.draft == false
 
-  read-tweet-md:
+    - name: Fail if status is not ok
+      if: ${{ steps.release-check.outputs.release_status != 'OK' }}
+      run: exit 1
+
+  get-contributor-name:
+    name: Get PR info
     runs-on: ubuntu-latest
-    needs: release-file-check
+
+    outputs:
+      contributor-name: ${{ steps.get-info.outputs.contributor-name }}
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get PR info
+        id: get-info
+        uses: ./.github/get-pr-info-action
+        env:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  read-tweet-md:
+    name: Read TWEET.md
+    runs-on: ubuntu-latest
+    needs: [get-contributor-name, release-file-check]
 
     outputs:
       tweet: ${{ steps.extract.outputs.tweet }}
-      card_text: ${{ steps.extract.outputs.card_text }}
+      card-text: ${{ steps.extract.outputs.card-text }}
 
     steps:
     - uses: actions/checkout@v1
@@ -38,6 +58,8 @@ jobs:
       uses: ./.github/read-tweet-action
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
+        version: "(next)"
+        contributor_name: ${{ needs.get-contributor-name.outputs.contributor-name }}
 
   validate-tweet:
     runs-on: ubuntu-latest
@@ -52,7 +74,7 @@ jobs:
 
   generate-preview:
     runs-on: ubuntu-latest
-    needs: [release-file-check, read-tweet-md]
+    needs: [release-file-check, read-tweet-md, get-contributor-name]
     if: always() && github.event.pull_request.draft == false
 
     outputs:
@@ -64,8 +86,8 @@ jobs:
       if: ${{ needs.release-file-check.outputs.status == 'OK' }}
       with:
         version: "(next)"
-        contributor: ${{ github.event.pull_request.user.login }}
-        description_base64: ${{ needs.read-tweet-md.outputs.card_text }}
+        contributor: ${{ needs.get-contributor-name.outputs.contributor-name }}
+        description_base64: ${{ needs.read-tweet-md.outputs.card-text }}
 
     - name: Uploads preview
       id: upload
@@ -81,7 +103,7 @@ jobs:
 
   send-comment:
     runs-on: ubuntu-latest
-    needs: [release-file-check, generate-preview]
+    needs: [release-file-check, generate-preview, read-tweet-md]
     if: always() && github.event.pull_request.draft == false
 
     steps:
@@ -97,3 +119,4 @@ jobs:
         change_type: ${{ needs.release-file-check.outputs.change_type }}
         changelog_base64: ${{ needs.release-file-check.outputs.changelog }}
         release_card_url: ${{ needs.generate-preview.outputs.url }}
+        tweet: ${{ needs.read-tweet-md.outputs.tweet }}
