--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,29 @@ on:
       - main
 
 jobs:
+  release-file-check:
+    name: Get information about release
+    runs-on: ubuntu-latest
+
+    outputs:
+      changelog: ${{ steps.release-check.outputs.changelog }}
+      status: ${{ steps.release-check.outputs.release_status }}
+      change_type: ${{ steps.release-check.outputs.change_type }}
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Release file check
+      uses: ./.github/release-check-action
+      id: release-check
+
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: release-file-check
+    if: ${{ needs.release-file-check.outputs.status == 'OK' }}
+    outputs:
+      version: ${{ steps.get-version.outputs.version }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -40,3 +60,128 @@ jobs:
           autopub commit
           autopub githubrelease
           poetry publish --username __token__ --password ${{ secrets.PYPI_TOKEN }}
+      - name: Get project version
+        id: get-version
+        shell: python
+        run: |
+          from autopub.base import get_project_version
+
+          print(f"::set-output name=version::{get_project_version()}")
+
+  get-contributor-name:
+    name: Get PR info
+    runs-on: ubuntu-latest
+    needs: release-file-check
+    if: ${{ needs.release-file-check.outputs.status == 'OK' }}
+
+    outputs:
+      contributor-name: ${{ steps.get-info.outputs.contributor-name }}
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get PR info
+        id: get-info
+        uses: ./.github/get-pr-info-action
+        env:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  read-tweet-md:
+    name: Read TWEET.md
+    runs-on: ubuntu-latest
+    needs: [release, get-contributor-name, release-file-check]
+    if: ${{ needs.release-file-check.outputs.status == 'OK' && needs.get-contributor-name.outputs.contributor-name }}
+
+    outputs:
+      tweet: ${{ steps.extract.outputs.tweet }}
+      card-text: ${{ steps.extract.outputs.card-text }}
+      has-tweet-file: ${{ steps.extract.outputs.has-tweet-file }}
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Extract tweet message and changelog
+      id: extract
+      uses: ./.github/read-tweet-action
+      with:
+        changelog: ${{ needs.release-file-check.outputs.changelog }}
+        version: ${{ needs.release.outputs.version }}
+        contributor_name: ${{ needs.get-contributor-name.outputs.contributor-name }}
+
+  generate-preview:
+    name: Generate Preview
+    runs-on: ubuntu-latest
+    needs: [release-file-check, read-tweet-md, release, get-contributor-name]
+    if: ${{ needs.release-file-check.outputs.status == 'OK' }}
+
+    steps:
+    - name: Generate Twitter card preview
+      uses: strawberry-graphql/release-cards@main
+      if: ${{ needs.release-file-check.outputs.status == 'OK' }}
+      with:
+        version: ${{ needs.release.outputs.version }}
+        contributor: ${{ needs.get-contributor-name.outputs.contributor-name }}
+        description_base64: ${{ needs.read-tweet-md.outputs.card-text }}
+    - name: Store card in artificats
+      uses: actions/upload-artifact@v2
+      with:
+        name: card
+        path: screenshot.png
+        retention-days: 1
+
+  send-tweet:
+    name: Send tweet
+    runs-on: ubuntu-latest
+    needs: [release, read-tweet-md, get-contributor-name, generate-preview]
+    if: ${{ needs.release-file-check.outputs.status == 'OK' }}
+
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: card
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: pip install tweepy
+      - name: Send tweet
+        shell: python
+        run: |
+          import os
+          import base64
+          import tweepy
+
+          auth = tweepy.OAuthHandler(
+              os.environ["TWITTER_CONSUMER_KEY"],
+              os.environ["TWITTER_CONSUMER_SECRET"],
+          )
+          auth.set_access_token(
+              os.environ["TWITTER_ACCESS_TOKEN"],
+              os.environ["TWITTER_ACCESS_TOKEN_SECRET"],
+          )
+
+          api = tweepy.API(auth)
+
+          tweet = base64.b64decode(os.environ["TWEET"]).decode("utf-8")
+
+          api.update_with_media("screenshot.png", status=tweet)
+        env:
+          TWEET: ${{ needs.read-tweet-md.outputs.tweet }}
+          TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+          TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+
+  remove-tweet-file:
+    name: Remove TWEET.md
+    if: always() && needs.read-tweet-md.outputs.has-tweet-file == 'true'
+    needs: [send-tweet, read-tweet-md]
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Remove TWEET.md and commit
+      run: |
+        git config --global user.name 'Strawberry GraphQL Bot'
+        git config --global user.email 'bot@strawberry.rocks'
+        git rm TWEET.md
+        git commit -m "Remove TWEET.md"
+        git push
