Use pull_request_target

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -1,7 +1,7 @@
 name: Release file check
 
 on:
-  pull_request:
+  pull_request_target:
     types: [synchronize, reopened, opened, ready_for_review]
     branches:
     - main
@@ -16,7 +16,10 @@ jobs:
       change_type: ${{ steps.release-check.outputs.change_type }}
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        ref: "refs/pull/${{ github.event.number }}/merge"
 
     - name: Release file check
       uses: ./.github/release-check-action
