--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -4,7 +4,7 @@ on:
   pull_request_target:
     types: [synchronize, reopened, opened, ready_for_review]
     branches:
-    - feature/action-forks
+    - main
 
 jobs:
   release-file-check:
