Update other steps too

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -38,7 +38,9 @@ jobs:
       contributor-name: ${{ steps.get-info.outputs.contributor-name }}
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          ref: "refs/pull/${{ github.event.number }}/merge"
       - name: Get PR info
         id: get-info
         uses: ./.github/get-pr-info-action
@@ -55,7 +57,7 @@ jobs:
       card-text: ${{ steps.extract.outputs.card-text }}
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Extract tweet message and changelog
       id: extract
       uses: ./.github/read-tweet-action
@@ -69,7 +71,7 @@ jobs:
     needs: read-tweet-md
     if: ${{ needs.read-tweet-md.outputs.tweet != '' }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Validate tweet
         uses: ./.github/validate-tweet-action
         with:
@@ -110,7 +112,7 @@ jobs:
     if: always() && github.event.pull_request.draft == false
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Send comment
       uses: ./.github/bot-action
       env:
