--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -4,7 +4,8 @@ on:
   pull_request_target:
     types: [synchronize, reopened, opened, ready_for_review]
     branches:
-    - main
+    # TODO: revert
+    - skip-release-check-sometimes
 
 jobs:
   get-contributor-info:
