--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -65,7 +65,7 @@ jobs:
   read-tweet-md:
     name: Read TWEET.md
     runs-on: ubuntu-latest
-    needs: [get-contributor-name, release-file-check]
+    needs: [get-contributor-info, release-file-check]
 
     outputs:
       tweet: ${{ steps.extract.outputs.tweet }}
@@ -81,7 +81,7 @@ jobs:
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
         version: "(next)"
-        contributor_name: ${{ needs.get-contributor-name.outputs.contributor-name }}
+        contributor_name: ${{ needs.get-contributor-info.outputs.contributor-name }}
 
   validate-tweet:
     runs-on: ubuntu-latest
@@ -96,7 +96,7 @@ jobs:
 
   generate-preview:
     runs-on: ubuntu-latest
-    needs: [release-file-check, read-tweet-md, get-contributor-name]
+    needs: [release-file-check, read-tweet-md, get-contributor-info]
     if: github.event.pull_request.draft == false
 
     outputs:
@@ -108,7 +108,7 @@ jobs:
       if: ${{ needs.release-file-check.outputs.status == 'OK' }}
       with:
         version: "(next)"
-        contributor: ${{ needs.get-contributor-name.outputs.contributor-name }}
+        contributor: ${{ needs.get-contributor-info.outputs.contributor-name }}
         description_base64: ${{ needs.read-tweet-md.outputs.card-text }}
 
     - name: Uploads preview
