--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -5,10 +5,62 @@ on:
     types: [synchronize, reopened, opened, ready_for_review]
     branches:
     - main
+    paths:
+    - "strawberry/**"
+    - "pyproject.toml"
 
 jobs:
-  release-file-check:
+  get-contributor-info:
+    name: Get PR info
     runs-on: ubuntu-latest
+
+    outputs:
+      contributor-name: ${{ steps.get-info.outputs.contributor-name }}
+      contributor-username: ${{ steps.get-info.outputs.contributor-username }}
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: "refs/pull/${{ github.event.number }}/merge"
+      - name: Get PR info
+        id: get-info
+        uses: ./.github/get-pr-info-action
+        env:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  skip-if-bot:
+    name: Set skip if PR is from a bot
+    runs-on: ubuntu-latest
+    needs: get-contributor-info
+
+    outputs:
+      skip: ${{ steps.skip.outputs.skip }}
+
+    steps:
+      - name: Set skip to true if contributor is a bot
+        id: skip
+        shell: python
+        run: |
+          bots = [
+             "dependabot-preview[bot]",
+             "dependabot-preview",
+             "dependabot",
+             "dependabot[bot]",
+           ]
+
+          username = "${{ needs.get-contributor-info.outputs.contributor-username }}"
+
+          if username in bots:
+            print(f"Skipping {username} because it is a bot")
+            print("::set-output name=skip::true")
+          else:
+            print("::set-output name=skip::false")
+
+  release-file-check:
+    name: Release check
+    runs-on: ubuntu-latest
+    needs: skip-if-bot
+    if: needs.skip-if-bot.outputs.skip == 'false'
 
     outputs:
       changelog: ${{ steps.release-check.outputs.changelog }}
@@ -26,31 +78,11 @@ jobs:
       id: release-check
       if: github.event.pull_request.draft == false
 
-    - name: Fail if status is not ok
-      if: ${{ steps.release-check.outputs.release_status != 'OK' }}
-      run: exit 1
-
-  get-contributor-name:
-    name: Get PR info
-    runs-on: ubuntu-latest
-
-    outputs:
-      contributor-name: ${{ steps.get-info.outputs.contributor-name }}
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: "refs/pull/${{ github.event.number }}/merge"
-      - name: Get PR info
-        id: get-info
-        uses: ./.github/get-pr-info-action
-        env:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   read-tweet-md:
     name: Read TWEET.md
     runs-on: ubuntu-latest
-    needs: [get-contributor-name, release-file-check]
+    needs: [get-contributor-info, release-file-check]
 
     outputs:
       tweet: ${{ steps.extract.outputs.tweet }}
@@ -66,7 +98,7 @@ jobs:
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
         version: "(next)"
-        contributor_name: ${{ needs.get-contributor-name.outputs.contributor-name }}
+        contributor_name: ${{ needs.get-contributor-info.outputs.contributor-name }}
 
   validate-tweet:
     runs-on: ubuntu-latest
@@ -81,8 +113,8 @@ jobs:
 
   generate-preview:
     runs-on: ubuntu-latest
-    needs: [release-file-check, read-tweet-md, get-contributor-name]
-    if: always() && github.event.pull_request.draft == false
+    needs: [release-file-check, read-tweet-md, get-contributor-info]
+    if: github.event.pull_request.draft == false
 
     outputs:
       url: ${{ steps.upload.outputs.url }}
@@ -93,7 +125,7 @@ jobs:
       if: ${{ needs.release-file-check.outputs.status == 'OK' }}
       with:
         version: "(next)"
-        contributor: ${{ needs.get-contributor-name.outputs.contributor-name }}
+        contributor: ${{ needs.get-contributor-info.outputs.contributor-name }}
         description_base64: ${{ needs.read-tweet-md.outputs.card-text }}
 
     - name: Uploads preview
@@ -111,7 +143,7 @@ jobs:
   send-comment:
     runs-on: ubuntu-latest
     needs: [release-file-check, generate-preview, read-tweet-md]
-    if: always() && github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false
 
     steps:
     - uses: actions/checkout@v2
@@ -127,3 +159,12 @@ jobs:
         changelog_base64: ${{ needs.release-file-check.outputs.changelog }}
         release_card_url: ${{ needs.generate-preview.outputs.url }}
         tweet: ${{ needs.read-tweet-md.outputs.tweet }}
+
+  fail-if-status-is-no-ok:
+    runs-on: ubuntu-latest
+    needs: [release-file-check, send-comment]
+
+    steps:
+    - name: Fail if status is not ok
+      if: ${{ needs.release-file-check.outputs.status != 'OK' }}
+      run: exit 1
