--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,4 +47,4 @@ jobs:
       - run: pip install poetry
       - name: Install dependencies
         run: poetry install
-      - run: poetry run mypy --ignore-missing-imports --config-file mypy.ini --install-types --non-interactive .
+      - run: poetry run mypy --ignore-missing-imports --config-file mypy.ini --no-incremental .
