--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ hupper = {version = "^1.5", optional = true}
 pygments = "^2.3"
 uvicorn = {version = ">=0.11.6,<0.15.0", optional = true}
 django = {version = ">=2,<4", optional = true}
-graphql-core = {version = "^3.1.0"}
+graphql-core = "~3.1.0"
 asgiref = {version = "^3.2", optional = true}
 flask = {version = "^1.1", optional = true}
 typing_extensions = "^3.7.4"
