--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ include = ["strawberry/py.typed"]
 python = "^3.7"
 starlette = {version = ">=0.13.6,<0.17.0", optional = true}
 click = {version = "^7.0", optional = true}
-hupper = {version = "^1.5", optional = true}
 pygments = "^2.3"
 uvicorn = {version = ">=0.11.6,<0.16.0", optional = true}
 django = {version = ">=2,<4", optional = true}
@@ -69,7 +68,6 @@ pydantic = {version = "<2", optional = false}
 email-validator = {version = "^1.1.3", optional = false}
 starlette = ">=0.13.6,<0.17.0"
 uvicorn = ">=0.11.6,<0.16.0"
-hupper = "^1.5"
 sanic = "^20.12.2"
 aiohttp = "^3.7.4.post0"
 pytest-aiohttp = "^0.3.0"
@@ -87,7 +85,7 @@ types-aiofiles = "^0.1.9"
 [tool.poetry.extras]
 aiohttp = ["aiohttp", "pytest-aiohttp"]
 asgi = ["starlette"]
-debug-server = ["starlette", "uvicorn", "hupper"]
+debug-server = ["starlette", "uvicorn"]
 django = ["django", "pytest-django", "asgiref"]
 flask = ["flask", "pytest-flask"]
 opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]
