--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ types-freezegun = "^1.1.0"
 types-chardet = "^0.1.5"
 types-certifi = "^0.1.4"
 types-aiofiles = "^0.1.9"
+Jinja2 = "^3.0.1"
 
 [tool.poetry.extras]
 aiohttp = ["aiohttp", "pytest-aiohttp"]
