Remove type ignore

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,3 +3,6 @@ plugins = ./strawberry/ext/mypy_plugin.py
 implicit_reexport = False
 ; Disabled because of this bug: https://github.com/python/mypy/issues/9689
 ; disallow_untyped_decorators = True
+
+[mypy-cached_property.*]
+ignore_missing_imports = True
