--- a/mypy_tests.ini
+++ b/mypy_tests.ini
@@ -18,3 +18,6 @@ ignore_missing_imports = True
 
 [mypy-dotenv.*]
 ignore_missing_imports = True
+
+[mypy-cached_property.*]
+ignore_missing_imports = True
