--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ graphql-core = "~3.1.0"
 asgiref = {version = "^3.2", optional = true}
 flask = {version = "^1.1", optional = true}
 typing_extensions = "^3.7.4"
-opentelemetry-api = {version = "0.17b0 || ~1.4", optional = true}
-opentelemetry-sdk = {version = "0.17b0 || ~1.4", optional = true}
+opentelemetry-api = {version = "^0.17b0 || ~1.4", optional = true}
+opentelemetry-sdk = {version = "^0.17b0 || ~1.4", optional = true}
 python-dateutil = "^2.7.0"
 cached-property = "^1.5.2"
 pydantic = {version = "<2", optional = true}
