--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ graphql-core = "~3.1.0"
 asgiref = {version = "^3.2", optional = true}
 flask = {version = "^1.1", optional = true}
 typing_extensions = "^3.7.4"
-opentelemetry-api = {version = "^0.17b0 || ~1.4", optional = true}
-opentelemetry-sdk = {version = "^0.17b0 || ~1.4", optional = true}
+opentelemetry-api = {version = "<1.5", optional = true}
+opentelemetry-sdk = {version = "<1.5", optional = true}
 python-dateutil = "^2.7.0"
 cached-property = "^1.5.2"
 pydantic = {version = "<2", optional = true}
@@ -59,8 +59,8 @@ requests = "^2.26.0"
 pre-commit = "^2.14.0"
 pytest-benchmark = "^3.4.1"
 freezegun = "^1.1.0"
-opentelemetry-api = "^0.17b0 || ~1.4"
-opentelemetry-sdk = "^0.17b0 || ~1.4"
+opentelemetry-api = "<1.5"
+opentelemetry-sdk = "<1.5"
 flake8-isort = "^4.0.0"
 flake8-black = "^0.2.1"
 django = {version = ">=2,<4", optional = false}
