--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ include = ["strawberry/py.typed"]
 [tool.poetry.dependencies]
 python = "^3.7"
 starlette = {version = ">=0.13.6,<0.17.0", optional = true}
-click = {version = "^7.0", optional = true}
+click = {version = ">=7.0,<9.0", optional = true}
 pygments = "^2.3"
 uvicorn = {version = ">=0.11.6,<0.16.0", optional = true}
 django = {version = ">=2,<4", optional = true}
