--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ on:
       - "tests/**"
       - "pyproject.toml"
       - "poetry.lock"
+      - ".github/workflows/test.yml"
 
 jobs:
   unit-tests:
