Only run tests when python files have changed (#1184)
* Only run tests when python files have changed

* Run tests if workflow changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,12 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+    paths:
+      - "strawberry/**"
+      - "tests/**"
+      - "pyproject.toml"
+      - "poetry.lock"
+      - ".github/workflows/test.yml"
 
 jobs:
   unit-tests:
