--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -182,6 +182,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       run: |
+        git config --global user.name 'Strawberry GraphQL Bot'
+        git config --global user.email 'bot@strawberry.rocks'
         git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
         git pull
         git rm TWEET.md
