--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Extract tweet message and changelog
       id: extract
-      uses: ./.github/read-tweet-action
+      uses: strawberry-graphql/tweet-actions/read-tweet@v1
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
         version: ${{ needs.release.outputs.version }}
