--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ classifiers = [
 ]
 include = ["strawberry/py.typed"]
 
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 starlette = {version = ">=0.13.6,<0.17.0", optional = true}
@@ -112,12 +116,17 @@ sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "DJANGO", "GRAPHQL", "FI
 addopts = "-s --emoji --mypy-ini-file=mypy_tests.ini --benchmark-disable"
 DJANGO_SETTINGS_MODULE = "tests.django.django_settings"
 testpaths = ["tests/"]
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 
 [tool.autopub]
 git-username = "Botberry"
 git-email = "bot@strawberry.rocks"
 project-name = "🍓"
 append-github-contributor = true
+
+[tool.pyright]
+include = ["strawberry"]
+exclude = ["**/__pycache__",]
+reportMissingImports = true
+reportMissingTypeStubs = false
+pythonVersion = "3.7"
+stubPath = ""
