--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,8 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -g --no-package-lock --no-save pyright
-      - run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+      - run: pip install poetry
+      - run: poetry config experimental.new-installer false
       - name: Install dependencies
         run: poetry install
       - name: Install django ${{ matrix.django }}
@@ -52,7 +53,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+      - run: pip install poetry
+      - run: poetry config experimental.new-installer false
       - name: Install dependencies
         run: poetry install
       - run: poetry run mypy --ignore-missing-imports --config-file mypy.ini --install-types --non-interactive .
