Update tweepy usage

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,7 +139,7 @@ jobs:
         with:
           python-version: '3.9'
       - name: Install dependencies
-        run: pip install tweepy
+        run: pip install tweepy==4.0.0
       - name: Send tweet
         shell: python
         run: |
@@ -160,7 +160,7 @@ jobs:
 
           tweet = base64.b64decode(os.environ["TWEET"]).decode("utf-8")
 
-          api.update_with_media("screenshot.png", status=tweet)
+          api.update_status_with_media("screenshot.png", status=tweet)
         env:
           TWEET: ${{ needs.read-tweet-md.outputs.tweet }}
           TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
