--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9']
+        python-version: ['3.7', '3.8', '3.9', '3.10-dev']
         django: [3.2, 3.1.8, 3.0.14, 2.2.20]
 
     steps:
@@ -33,11 +33,11 @@ jobs:
           node-version: '14'
       - run: npm install -g --no-package-lock --no-save pyright
       - run: pip install poetry
+      - run: poetry config experimental.new-installer false
       - name: Install dependencies
         run: poetry install
-      - name: Install dependencies
+      - name: Install django ${{ matrix.django }}
         run: poetry add django==${{ matrix.django }}
-
       - name: pytest
         run: poetry run py.test --cov-report xml --cov=. --cov-fail-under 80 --showlocals -vv
       - uses: codecov/codecov-action@v1
@@ -54,6 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: pip install poetry
+      - run: poetry config experimental.new-installer false
       - name: Install dependencies
         run: poetry install
       - run: poetry run mypy --ignore-missing-imports --config-file mypy.ini --install-types --non-interactive .
