--- a/mypy_tests.ini
+++ b/mypy_tests.ini
@@ -21,3 +21,6 @@ ignore_missing_imports = True
 
 [mypy-cached_property.*]
 ignore_missing_imports = True
+
+[mypy-sentinel.*]
+ignore_missing_imports = True
