--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ pydantic = {version = "<2", optional = true}
 python-multipart = "^0.0.5"
 sanic = {version = ">=20.12.2,<22.0.0", optional = true}
 aiohttp = {version = "^3.7.4.post0", optional = true}
-fastapi = {version = "^0.68.1", optional = true}
+fastapi = {version = ">=0.65.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
@@ -90,7 +90,7 @@ types-chardet = "^4.0.0"
 types-certifi = "^2020.4.0"
 types-aiofiles = "^0.1.9"
 sanic-testing = "^0.7.0"
-fastapi = "^0.68.1"
+fastapi = {version = ">=0.65.0", optional = false}
 
 [tool.poetry.extras]
 aiohttp = ["aiohttp", "pytest-aiohttp"]
