Support for Windows in CI (#1321)
* ci: enable windows-latest for backend tests

* fix(tests.cli.test_server): support windows

* test(tests.pyright): disable on windows

* chore(release.md): patch details

* fix(strawberry.cli.commands.server): add --log-level option to improve test reliability

* Update tests/cli/test_server.py

Co-authored-by: Patrick Arminio <patrick.arminio@gmail.com>

* chore: code review feedback

* fix(strawberry.cli.commands.server): specify list of valid values for log-level to uvicorn

Co-authored-by: Patrick Arminio <patrick.arminio@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ types-chardet = "^4.0.0"
 types-certifi = "^2020.4.0"
 types-aiofiles = "^0.1.9"
 sanic-testing = "^0.7.0"
+pytest-xprocess = "^0.18.1"
 
 [tool.poetry.extras]
 aiohttp = ["aiohttp", "pytest-aiohttp"]
