Update cache path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,11 @@ jobs:
         python-version: ['3.7', '3.8', '3.9', '3.10']
         django: [3.2, 3.1.8, 3.0.14, 2.2.20]
         os: [ubuntu-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            path: ~/.cache/pypoetry/virtualenvs
+          - os: windows-latest
+            path: ~\AppData\Local\pypoetry\Cache
 
     name: Test on ${{ matrix.os }} - ${{ matrix.python-version }} - django ${{ matrix.django }}
     runs-on: ${{ matrix.os }}
@@ -44,8 +49,9 @@ jobs:
         id: cache-poetry-dependencies
         uses: actions/cache@v2
         with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: $${{ matrix.os }}-py-${{ matrix.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
+          path: ${{ matrix.cache-path }}
+          key: ${{ runner.os }}-py-${{ matrix.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
+          restore-keys: ${{ runner.os }}-py-${{ matrix.python-version }}-poetry-
 
       - name: Install dependencies
         run: poetry install
