--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,6 @@ on:
 
 jobs:
   unit-tests:
-
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10']
@@ -57,7 +56,7 @@ jobs:
         if: steps.cache-poetry-dependencies.outputs.cache-hit != 'true'
 
       - name: pytest
-        run: poetry run py.test --cov-report xml --cov=. --showlocals -vv
+        run: poetry run py.test --cov-report xml --cov=. --showlocals -vv -m "not django"
 
       - uses: codecov/codecov-action@v1
         if: ${{ always() }}
@@ -103,7 +102,7 @@ jobs:
         run: poetry add django==${{ matrix.django }}
 
       - name: pytest
-        run: poetry run py.test --cov-report xml --cov=. --showlocals -vv
+        run: poetry run py.test --cov-report xml --cov=. --showlocals -vv -m django
 
       - uses: codecov/codecov-action@v1
         if: ${{ always() }}
